# epoch

./: .gitignore  README.md  epoch-goals-1.0.0-1.x86_64.rpm  epoch-goals_1.0.0_amd64.deb  manifest.json  newtab.html  package-lock.json  package.json  script.js  styles.css
aur-package/: .SRCINFO  PKGBUILD
src/: styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: main.rs
