[package]
name = "epoch-goals"
version = "1.0.0"
description = "Beautiful goals and tasks tracker"
authors = ["Epoch Goals"]
license = "MIT"
edition = "2021"
rust-version = "1.77.2"

[lib]
name = "epoch_goals_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5.3", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.9.5", features = [] }
tauri-plugin-log = "2"
